Fix: wrap a tag around the card div for consistency

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -205,7 +205,7 @@ li {
   padding: 0 1.5em 0 0;
 }
 
-.trending-card a {
+.trending-card {
   display: flex;
   gap: 1em;
   align-items: center;
